clusters/server/dev/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: server
spec:
  template:
    spec:
      containers:
        - name: server
          image: jporeilly/GitOps:dev-4b487724fc96e0b2cd026550e06b420cb61d4ece
